# data-chatbot

./: .gitignore  Dockerfile  README.md  chainlit.md  pyproject.toml
data/: school_dummy_data.json
data/db/: school.db
diagram/: data-chatbot.drawio
src/: app.py  bot.py  initialise_db.py  prompt.py  tools.py  utils.py
